[Add] product 마크엄

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,22 @@
 
   <body>
     <section>
+      <a href="" class="product tangtang">
+      <div class="product__image_container">
+        <img
+          class="product__image_container__tumbnail"
+          src="./assets/tangtang/thumbnail.jpg"
+          alt="탱탱쫄면"
+        />
+        <button class="product__shopping_basket">
+          <img src="./assets/icons/Icon/Cart.svg" alt="장바구니 아이콘" />
+        </button>
+      </div>
+      <div class="product__info">
+        <h3 class="product__info__name">[풀무원] 탱탱쫄면 (4개입)</h3>
+        <div class="product__info__price">4,980 원</div>
+      </div>
+    </a>
       <div class="swiper-1 product-swiper">
         <div class="swiper-wrapper"></div>
       </div>
