--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <section>
-      <a href="" class="product tangtang">
+      <!-- <a href="" class="product tangtang">
       <div class="product__image_container">
         <img
           class="product__image_container__tumbnail"
@@ -31,10 +31,22 @@
         <h3 class="product__info__name">[풀무원] 탱탱쫄면 (4개입)</h3>
         <div class="product__info__price">4,980 원</div>
       </div>
-    </a>
-      <div class="swiper-1 product-swiper">
-        <div class="swiper-wrapper"></div>
+    </a> -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+        <div class="swiper-slide">Slide 4</div>
+        <div class="swiper-slide">Slide 5</div>
+        <div class="swiper-slide">Slide 6</div>
+        <div class="swiper-slide">Slide 7</div>
+        <div class="swiper-slide">Slide 8</div>
+        <div class="swiper-slide">Slide 9</div>
       </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
     </section>
     <section>
       <div class="swiper-2 product-swiper">
