--- a/client/index.html
+++ b/client/index.html
@@ -97,14 +97,34 @@
               </div>
             </a>
           </div>
-          <div class="swiper-slide">Slide 4</div>
+          <div class="swiper-slide">
+            <a href="" class="product tangtang">
+              <div class="product__image_container">
+                <img
+                  class="product__image_container__tumbnail"
+                  src="./assets/tangtang/thumbnail.jpg"
+                  alt="탱탱쫄면"
+                />
+                <button class="product__shopping_basket">
+                  <img
+                    src="./assets/icons/Icon/Cart.svg"
+                    alt="장바구니 아이콘"
+                  />
+                </button>
+              </div>
+              <div class="product__info">
+                <h3 class="product__info__name">[풀무원] 탱탱쫄면 (4개입)</h3>
+                <div class="product__info__price">4,980 원</div>
+              </div>
+            </a>
+          </div>
           <div class="swiper-slide">Slide 5</div>
           <div class="swiper-slide">Slide 6</div>
           <div class="swiper-slide">Slide 7</div>
           <div class="swiper-slide">Slide 8</div>
           <div class="swiper-slide">Slide 9</div>
         </div>
-        <div class="swiper-button-next"></div>
+        <button class="swiper-button-next"></button>
         <div class="swiper-button-prev"></div>
       </div>
     </section>
